<resources>
    <string name="app_name">Home Financial Assistant</string>
    <string name="main">На главную</string>
    <string name="credit_calculator">Кредитный калькулятор</string>
    <string name="credit_calculator_back">Обратный кредитный калькулятор</string>
    <string name="calculator_credit_card">Калькулятор кредитной карты</string>
    <string name="calculation">Расчёт кредита</string>
    <string name="credit_params">Кредитный калькулятор</string>
    <string name="switch_back_calculator">Обратный кредитный калькулятор</string>
    <string name="enter_amount_of_credit">Введите сумму кредита</string>
    <string name="enter_tern_of_credit">Введите срок кредита</string>
    <string name="enter_percent_of_credit">Введите предлагаемый процент</string>
    <string name="percent_back">Процент банка:</string>
    <string name="do_you_want_exit">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="monthly_payment">Ежемесячный платёж:</string>
    <string name="monthly_payment_back">Введите ежемесячный платёж:</string>
    <string name="overpayment">Переплата:</string>
    <string name="null_number">0.0</string>
    <string name="enter_your_email">Введите ваш адресс электронной почты</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="authorization_title">Авторизуйтесь одним из указанных способов или начните пользоваться финансовым ассистентом, как гость</string>
    <string name="exchange_rates_headline">Конвертёр валют</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_vk">Sign in with VK</string>
    <string name="sign_email">Sign in or register with Email</string>
    <string name="sign_guest">Продолжить, как гость</string>
    <string name="setting">Setting Application</string>
    <string name="refresh">Обновить</string>
    <string name="course_dollar">Курс доллара: </string>
    <string name="course_euro">Курс евро: </string>
    <string name="course_btc">Курс BTC: </string>
    <string name="add_consumption">Добавление расхода </string>
    <string name="add_income">Добавление дохода </string>
    <string name="add_category">Введите категорию </string>
    <string name="add_price">Введите цену </string>
    <string name="add_sum">Введите сумму </string>
    <string name="add_date">Введите дату </string>
    <string name="add_description">Введите описание </string>
    <string name="addConsumptionButton">Добавить </string>
    <string name="expense_journal">Журнал расходов </string>
    <string name="homeHeadline">Ваши траты </string>
    <string name="spinnerText">Выберите категорию траты</string>
    <string name="image_consumption_item">image_of_category</string>
    <string name="anything_text">anything text</string>
    <string name="anything_long_text">Some long text, for example, a description of spending</string>
    <string name="delete_button_desc">Удаляет текущую запись</string>
    <string name="edit_button_desc">Редактировать текущую запись</string>
    <string name="add_button_desc">Добавление записи</string>
    <string name="buttonCancel">Отмена</string>
    <string name="category">Категория</string>
    <string name="date">Дата</string>
    <string name="descConsumption">Описание траты</string>
    <string name="price">Цена</string>
    <string name="all_consumption">Всего потрачено: </string>
    <string name="all_consumption_home">%1$s руб.</string>
    <string name="settings">Настройки</string>
    <string name="rub"> руб.</string>
    <string name="google"> через Google</string>
    <string name="e_mail"> через e-mail</string>
    <string name="auto_vk"> через ВК</string>
    <string name="implemented_later"> будет реализована позже ;)</string>
    <string name="authorization"> Авторизация </string>
    <string name="your_balance"> Ваш баланс </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>