<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_home"
        android:title="@string/main"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/creditCalculator"
        android:icon="@drawable/ic_credit_calculator"
        android:title="@string/credit_calculator"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/baseline_currency_exchange_24"
        android:title="@string/exchange_rates_headline"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/expenseJournal"
        android:icon="@drawable/baseline_auto_stories_24"
        android:title="@string/expense_journal"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_suggest_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        />


</menu>