<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_marginTop="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/categoryConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:theme="@style/HeadLine1"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:theme="@style/ConsumptionItem"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryConsumption" />

    <TextView
        android:id="@+id/priceConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:theme="@style/ConsumptionItem"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryConsumption" />

    <TextView
        android:id="@+id/descConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:theme="@style/ConsumptionItem"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceConsumption" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/descConsumption"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonDelete"
            android:layout_width="@dimen/consumption_item_delete_button_weight"
            android:layout_height="@dimen/consumption_item_delete_button_height"
            android:background="@drawable/delete"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/delete_button_desc"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonEdit"
            android:layout_width="@dimen/consumption_item_delete_button_weight"
            android:layout_height="@dimen/consumption_item_delete_button_height"
            android:background="@drawable/baseline_edit_24"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/edit_button_desc"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/consumption_item_delete_button_weight"
            android:layout_height="@dimen/consumption_item_delete_button_height"
            android:background="@drawable/baseline_cancel_24"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/buttonCancel"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>