<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ExchangeRatesFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/topHeadlineExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_rates_headline"
            android:theme="@style/HeadLine1"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dollarsContainer"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@+id/topHeadlineExchange">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/euro"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/course_euro"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/courseEuro"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/null_number"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:theme="@style/Field_converter"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/course_dollar"
                app:layout_constraintTop_toBottomOf="@+id/euro"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/courseDollar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/null_number"
                app:layout_constraintTop_toBottomOf="@+id/courseEuro"
                app:layout_constraintEnd_toEndOf="parent"
                android:theme="@style/Field_converter"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btc"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/course_btc"
                app:layout_constraintTop_toBottomOf="@id/dollar"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/courseBtc"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/null_number"
                app:layout_constraintTop_toBottomOf="@id/courseDollar"
                app:layout_constraintEnd_toEndOf="parent"
                android:theme="@style/Field_converter"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dollarsContainer"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>