<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/authorization_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_textview_on_main_height"
            android:gravity="center"
            android:text="@string/authorization"
            android:theme="@style/HeadLine1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_email_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginTop="@dimen/spacing_between_elements"
            app:boxStrokeColor="@color/secondary_color"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/authorization_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_email"
                android:hint="@string/enter_your_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_password_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginTop="@dimen/spacing_between_elements"
            app:boxStrokeColor="@color/secondary_color"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/enter_email_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_password"
                android:hint="@string/enter_your_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_text"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>