<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/consumption_item_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemConsumption">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="@dimen/consumption_item_image_weight"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_consumption_item"
            tools:src="@tools:sample/avatars"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/consumption_item_delete_button_weight"
                android:layout_marginStart="@dimen/consumption_item_image_weight"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expenseData"
                    android:layout_width="@dimen/consumption_item_text_weight"
                    android:layout_height="match_parent"
                    android:text="@string/anything_text"
                    android:gravity="center"
                    android:textSize="14sp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expensePrice"
                    android:layout_width="@dimen/consumption_item_text_weight"
                    android:layout_height="match_parent"
                    android:text="@string/anything_text"
                    android:gravity="center"
                    android:textSize="14sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/consumption_item_image_weight"
                android:layout_marginEnd="@dimen/consumption_item_delete_button_weight"
                android:textSize="12sp"
                android:layout_gravity="bottom"
                android:gravity="center"
                tools:text="@string/anything_long_text" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>